# Generated by Django 5.2.16 on 2026-09-23 12:25

import django.db.models.deletion
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Category',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=100, unique=True)),
                ('slug', models.SlugField(max_length=100, unique=True)),
            ],
        ),
        migrations.CreateModel(
            name='Image',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('file', models.ImageField(upload_to='projects/')),
                ('alt', models.CharField(max_length=255)),
                ('theme', models.CharField(blank=True, default='', max_length=50)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='Skill',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=100, unique=True)),
                ('slug', models.SlugField(max_length=100, unique=True)),
            ],
        ),
        migrations.CreateModel(
            name='Technology',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=100, unique=True)),
                ('slug', models.SlugField(max_length=100, unique=True)),
            ],
        ),
        migrations.CreateModel(
            name='Project',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('title', models.CharField(max_length=200)),
                ('slug', models.SlugField(max_length=200, unique=True)),
                ('project_type', models.CharField(max_length=100)),
                ('description', models.TextField()),
                ('github_url', models.URLField(blank=True)),
                ('website_url', models.URLField(blank=True)),
                ('client_url', models.URLField(blank=True)),
                ('published', models.BooleanField(default=False)),
                ('started_at', models.DateField()),
                ('ended_at', models.DateField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('category', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='projects', to='projects.category')),
                ('images', models.ManyToManyField(blank=True, related_name='projects', to='projects.image')),
                ('skills', models.ManyToManyField(blank=True, related_name='projects', to='projects.skill')),
                ('technologies', models.ManyToManyField(blank=True, related_name='projects', to='projects.technology')),
            ],
        ),
        migrations.CreateModel(
            name='ProjectPage',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('slug', models.SlugField(max_length=200)),
                ('title', models.CharField(max_length=200)),
                ('subtitle', models.CharField(blank=True, max_length=255)),
                ('mermaid', models.TextField(blank=True)),
                ('layout', models.CharField(choices=[('default', 'Default'), ('image-top', 'Top'), ('image-bottom', 'Bottom')], default='default', max_length=20)),
                ('position', models.PositiveIntegerField(default=0)),
                ('published', models.BooleanField(default=False)),
                ('images', models.ManyToManyField(blank=True, related_name='pages', to='projects.image')),
                ('project', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pages', to='projects.project')),
            ],
            options={
                'ordering': ['position'],
            },
        ),
        migrations.CreateModel(
            name='Paragraph',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('content', models.TextField()),
                ('position', models.PositiveIntegerField(default=0)),
                ('page', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='paragraphs', to='projects.projectpage')),
            ],
            options={
                'ordering': ['position'],
            },
        ),
        migrations.CreateModel(
            name='Highlight',
            fields=[
                ('id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('content', models.CharField(max_length=255)),
                ('position', models.PositiveIntegerField(default=0)),
                ('page', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='highlights', to='projects.projectpage')),
            ],
            options={
                'ordering': ['position'],
            },
        ),
        migrations.AddConstraint(
            model_name='projectpage',
            constraint=models.UniqueConstraint(fields=('project', 'slug'), name='unique_page_slug_per_project'),
        ),
    ]
