%% Diagramme de compatibilité ; documentation complète dans docs/apps/projects/data-model.md.
erDiagram
    CATEGORY |o--o{ PROJECT : classe
    PROJECT }o--o{ SKILL : mobilise
    PROJECT }o--o{ TECHNOLOGY : utilise
    PROJECT ||--o{ PROJECT_PAGE : contient
    PROJECT_PAGE ||--o{ PARAGRAPH : contient
    PROJECT_PAGE ||--o{ HIGHLIGHT : contient
    PROJECT }o--o{ IMAGE : associe
    PROJECT_PAGE }o--o{ IMAGE : associe
